# BackEndCapstoneProject

./: .gitignore  README.md  pyproject.toml
littlelemon/: asgi.py  settings.py  urls.py  wsgi.py
restaurant/: apps.py  models.py  serializers.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py  0002_alter_booking_no_of_guests_alter_menu_inventory.py
tests/: test_models.py
